--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.4",
+    "@angular/animations": "^10.2.4",
     "@angular/common": "~10.2.4",
     "@angular/compiler": "~10.2.4",
     "@angular/core": "~10.2.4",
     "@angular/forms": "~10.2.4",
+    "@angular/localize": "~10.2.4",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "angular-feather": "^6.1.0",
+    "angular-in-memory-web-api": "^0.11.0",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
+    "ng-sidebar": "^9.4.2",
+    "ng2-charts": "^2.4.2",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -30,6 +39,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
